# parakeet-wx

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.MD  RELEASING.md  build-linux-docker.sh  build-po.sh  build-prepare.sh  build-setup-ubuntu.sh  dev-format-files.sh  extract-i18n.sh  parakeet-wx (msvc).code-workspace  parakeet-wx.code-workspace  prepare-ui-hidpi.py  prepare.linux.sh  readme.enduser.txt  vcpkg.json
docs/: tc_tea.md
um-crypto/: CMakeLists.txt  dummy.cpp
um-crypto/include/: um-crypto.h
um-crypto/include/um-crypto/: common.h  endian.h  kgm.h  kugou.h  kuwo.h  qmcv2.h  tc_tea.h  tencent.h  types.h  vpr.h  xiami.h  ximalaya.h
um-crypto/include/um-crypto/abstract/: AXorStreamCipher.h  XorStreamCipherBase.h
um-crypto/include/um-crypto/decryption/: DecryptionManager.h  DecryptionStream.h
um-crypto/include/um-crypto/decryption/kugou/: KugouFileLoader.h
um-crypto/include/um-crypto/decryption/kuwo/: KuwoFileLoader.h
um-crypto/include/um-crypto/decryption/netease/: NCMFileLoader.h
um-crypto/include/um-crypto/decryption/tencent/: JooxFileLoader.h  QMCv1Loader.h  QMCv2Loader.h  joox.h
um-crypto/include/um-crypto/decryption/xiami/: XiamiFileLoader.h
um-crypto/include/um-crypto/interface/: IStreamCipher.h
um-crypto/include/um-crypto/kugou/: KGMCipher.h  KGMFileParser.h  KGMMaskGenerator.h  VPRCipher.h  constants.h  file_parser.h  kgm.h  vpr.h
um-crypto/include/um-crypto/kuwo/: KWMCipher.h  KWMFileParser.h
um-crypto/include/um-crypto/misc/: QMCFooterParser.h  QMCKeyDeriver.h
um-crypto/include/um-crypto/qmcv2/: SimpleEKeyDerive.h  file_parser.h  key_derive.h  map_cipher.h  rc4_cipher.h
um-crypto/include/um-crypto/tencent/: MapCipher.h  QMCFileParser.h  RC4Cipher.h  SimpleEKeyDerive.h  StaticStreamCipher.h
um-crypto/include/um-crypto/utils/: AudioMetadata.h  AudioTypes.h  DetectAudioType.h  StringHelper.h  base64.h  hex.h  md5.h
um-crypto/include/um-crypto/xiami/: XMCipher.h  XMFileParser.h  common.h
um-crypto/include/um-crypto/ximalaya/: AXimalayaAndroidHeaderCipher.h  X2MCipher.h  X2MFileParser.h  X3MCipher.h  XimalayaParser.h  common.h
um-crypto/src/abstract/: AXorStreamCipher.cpp  XorStreamCipherBase.cpp
um-crypto/src/decryption/: DecryptionManager.cpp
um-crypto/src/decryption/kugou/: KGMDecryptor.cpp  KGMDecryptor.h  KGMDecryptorType.template.txt  KGMDecryptorType2.cpp  KGMDecryptorType3.cpp  KGMDecryptorType4.cpp  KugouFileLoader.cpp  KugouFileLoader.test.cc  KugouHeader.h
um-crypto/src/decryption/kuwo/: KuwoFileLoader.cpp  KuwoFileLoader.test.cc
um-crypto/src/decryption/netease/: NCMFileLoader.cpp  NCMFileLoader.test.cc
um-crypto/src/decryption/tencent/: JooxFileLoader.cpp  JooxFileLoader.test.cc  QMCv1.test.cc  QMCv1Loader.cpp  QMCv2.test.cc  QMCv2Loader.cpp  joox.cpp
um-crypto/src/decryption/xiami/: XiamiFileLoader.cpp  XiamiFileLoader.test.cc
um-crypto/src/decryption/ximalaya/: X2MFile.test.cc  X3MFile.test.cc  XimalayaFileLoader.cpp
um-crypto/src/internal/: StringHelper.h  XorHelper.h  endian.h  endian_helper.h  inline.h  str_helper.h
um-crypto/src/kugou/: KGMCipher.cpp  KGMFileParser.cpp  KGMMaskGenerator.cpp  KGMMaskGenerator.test.cc  VPRCipher.cpp  constants.cpp  file_parser.cpp  kgm.cpp  kgm_crypto.h  kgm_data.cpp  kgm_data.h  vpr.cpp
um-crypto/src/kuwo/: KWMCipher.cpp  KWMFileParser.cpp
um-crypto/src/misc/: QMCFooterParser.cpp  QMCKeyDeriver.cpp
um-crypto/src/misc/tc_tea/: tc_tea.h  tc_tea_cbc.cpp  tc_tea_cbc.test.cc  tc_tea_ecb.cpp
um-crypto/src/qmcv2/: AEKeyDerive.cpp  MapCipher.cpp  QMCFileParser.cpp  QMCFileParser.test.cc  RC4Cipher.cpp  SimpleEKeyDerive.cpp  file_parser.cpp  file_parser.test.cc  key_derive.cpp  key_derive.test.cc  map_cipher.cpp  map_cipher.test.cc  rc4_cipher.cpp  rc4_cipher.test.cc  stream_encrypt_map.cpp  stream_encrypt_map.test.cc  stream_encrypt_rc4.cpp  stream_encrypt_rc4.test.cc
um-crypto/src/tc_tea/: tc_tea_cbc.cpp  tc_tea_cbc.test.cc  tc_tea_ecb.cpp  tc_tea_ecb.h
um-crypto/src/tencent/: AEKeyDerive.cpp  MapCipher.cpp  MapCipher.test.cc  QMCFileParser.cpp  QMCFileParser.test.cc  RC4Cipher.cpp  RC4Cipher.test.cc  SimpleEKeyDerive.cpp  SimpleEKeyDerive.test.cc  StaticStreamCipher.cpp
um-crypto/src/tencent/tc_tea/: tc_tea_cbc.cpp  tc_tea_cbc.test.cc  tc_tea_ecb.cpp
um-crypto/src/test/: helper.test.cc  helper.test.hh
um-crypto/src/util/: endian.h  internal.h  str_helper.h
um-crypto/src/utils/: DetectAudioType.cpp  base64.cpp  hex.cpp  md5.cpp  umc_version.cpp
um-crypto/src/xiami/: XMCipher.cpp  XMFileParser.cpp
um-crypto/src/ximalaya/: AXimalayaAndroidHeaderCipher.cpp  X2MCipher.cpp  X2MFileParser.cpp  X3MCipher.cpp
um-desktop/: CMakeLists.txt  MainAppFrame.cpp  MainAppFrame.h  app.cpp  app.h  app.rc  app_version.h  constants.h  parakeet.xpm  types.h
um-desktop/config/: AppConfig.cpp  AppConfig.h  AppConfigStore.cpp  AppConfigStore.h  ConfigBase.h  GeneralConfig.h  KuGouConfig.h
um-desktop/dialog/: MainAppFrame.cpp  MainAppFrame.h  OptionsDialog.cpp  OptionsDialog.h  __priv_table.h
um-desktop/res/: parakeet.xpm
um-desktop/ui/: ui.cpp  ui.h
um-desktop/utils/: AppDataPath.cpp  AppDataPath.h  AudioDecryptorManager.cpp  AudioDecryptorManager.h  JSONExtension.h  MakeArray.h  StringConvert.h  audio_decryptor.cpp  audio_decryptor.h  audio_type_sniff.cpp  audio_type_sniff.h  common.h  threading.cpp  threading.h  wxMainThreadRunner.hpp
um-desktop/utils/AppDataPath/: apple_impl.hpp  linux_impl.hpp  windows_impl.hpp
um-desktop/utils/audio_decryptor/: ADecryptor.cpp  ADecryptor.h  AStreamDecryptor.cpp  AStreamDecryptor.h  AXorDecryptor.cpp  AXorDecryptor.h  KugouMusicDecryptor.cpp  KugouMusicDecryptor.h  KuwoMusicDecryptor.cpp  KuwoMusicDecryptor.h  QQMusicV1Decryptor.cpp  QQMusicV1Decryptor.h  QQMusicV2Decryptor.cpp  QQMusicV2Decryptor.h  XiamiMusicDecryptor.cpp  XiamiMusicDecryptor.h  XimalayaX2MDecryptor.cpp  XimalayaX2MDecryptor.h  XimalayaX3MDecryptor.cpp  XimalayaX3MDecryptor.h
um-desktop/utils/audio_sniff/: AudioTagDetection.h  mediainfo.cpp  mediainfo.h  simple.cpp  simple.h
(+93 files in other folders)
